# rust-template

./: .autocorrectignore  .autocorrectrc  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  deny.toml  justfile  rustfmt.toml  typos.toml
.codex/: AGENTS.md
.codex/skills/rust-dev/: SKILL.md
.codex/skills/rust-dev/references/: README.md  design.md  e2e-python.md  e2e-tests.md  error-handling.md  justfile.md  refactor.md  research.md  size-gates.md  technology-stack.md  template-guide.md  testing.md  workspace.md
.codex/skills/rust-dev/scripts/: rust_size_gate.py
.codex/skills/rust-testing/: SKILL.md
.codex/skills/rust-testing/references/: README.md  async-testing.md  common-pitfalls.md  dependency-injection.md  determinism-and-stability.md  examples.md  http-mock.md  mockall.md  proptest.md  proxy-platform-examples.md  test-layout.md
.codex/skills/rust-testing/scripts/: mirror_src_tests.py
.github/workflows/: ci.yaml  prek-checks.yaml
E2E/: .gitignore  README.md  main.py  pyproject.toml
E2E/data/: README.md
E2E/tests/: .placehold
E2E/tests/bdd/: .placehold
crates/app/: Cargo.toml
crates/app/src/: lib.rs
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/cli/tests/: smoke.rs
crates/domain/: Cargo.toml
crates/domain/src/: lib.rs
crates/infra/: Cargo.toml
crates/infra/src/: lib.rs
crates/xtask/src/: main.rs
docs/: README.md  application-types.md  dependency-policy.md  development.md  project-profiles.md  technology-stack.md  testing.md
scripts/: README.md  rust_size_gate.py  update-readme-version.sh
template/base/: Cargo.toml  README.md  TEMPLATE.md
template/base/crates/app/: Cargo.toml
template/base/crates/app/src/: lib.rs
template/base/crates/cli/: Cargo.toml
template/base/crates/cli/src/: main.rs
template/base/crates/cli/tests/: smoke.rs
template/base/crates/domain/: Cargo.toml
template/base/crates/infra/: Cargo.toml
template/base/crates/infra/src/: lib.rs
template/base/crates/xtask/: Cargo.toml
template/base/crates/xtask/src/: main.rs
template/base/docs/: architecture.md  error-handling.md  fail-fast.md  review.md  technology-stack.md
template/service/: .env.example  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  TEMPLATE.md  cargo-generate.toml  deny.toml  justfile
template/service/.config/: nextest.toml
template/service/.github/workflows/: ci.yaml
template/service/crates/app/: Cargo.toml
template/service/crates/app/src/: lib.rs
template/service/crates/cli/: Cargo.toml
template/service/crates/cli/src/: main.rs
template/service/crates/domain/src/: lib.rs
template/service/crates/infra/: Cargo.toml
template/service/crates/infra/src/: lib.rs
template/service/docs/: README.md  dependency-policy.md  development.md  observability.md  technology-stack.md  testing.md
