[package]
name = "template-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "template"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
template-app = { workspace = true }
template-infra = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
