[package]
name = "{{project-name}}-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
{{project-name}}-app = { workspace = true }
{{project-name}}-infra = { workspace = true }

[dev-dependencies]
assert_cmd = { workspace = true }
predicates = { workspace = true }
