[package]
name = "{{project-name}}-app"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
path = "src/lib.rs"

[lints]
workspace = true

[dependencies]
thiserror = { workspace = true }
{{project-name}}-domain = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
