[package]
name = "{{project-name}}-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "{{project-name}}"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry-otlp = { workspace = true }
opentelemetry_sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tokio = { workspace = true, features = ["macros", "net", "rt-multi-thread", "signal"] }
tracing = { workspace = true }
tracing-opentelemetry = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "fmt", "json"] }
{{project-name}}-app = { workspace = true }
{{project-name}}-domain = { workspace = true }
{{project-name}}-infra = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
tower = { workspace = true, features = ["util"] }
